--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.5
+  geolocator: ^9.0.2
+  geocoding: ^2.1.0
+  sleek_circular_slider: ^2.0.1
+  http: ^0.13.5
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
